--- a/app/views/prototypes/small-itp/edit.html
+++ b/app/views/prototypes/small-itp/edit.html
@@ -107,7 +107,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
         
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group" checked="checked">Male</label>
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group" checked="checked" value="true">Male</label>
         <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint" value="true">
         </span>
       </div>
@@ -135,7 +135,7 @@
       
       <div class="govuk-radios__divider">or</div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="ethnic-group-7" name="ethnic-group" type="radio" value="prefer-not-to-say">
+        <input class="govuk-radios__input" id="ethnic-group-7" name="ethnic-group" type="radio" value="prefer-not-to-say" checked="checked">
         <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-7">
           Prefer not to say
         </label>
@@ -153,7 +153,7 @@
     </legend>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
+        <input class="govuk-radios__input" checked="checked" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
           White
         </label>
@@ -226,7 +226,7 @@
       </div>
       <div class="govuk-radios__divider">or</div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="ethnic-group-6" name="ethnic-group" type="radio" value="prefer-not-to-say">
+        <input class="govuk-radios__input" id="ethnic-group-6" name="ethnic-group" type="radio" value="prefer-not-to-say" checked="checked">
         <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-6">
           Prefer not to say
         </label>
@@ -268,7 +268,7 @@
       
       <div class="govuk-radios__divider">or</div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="ethnic-group-7" name="ethnic-group" type="radio" value="prefer-not-to-say">
+        <input class="govuk-radios__input" id="ethnic-group-7" name="ethnic-group" type="radio" value="prefer-not-to-say" checked="checked">
         <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-7">
           Prefer not to say
         </label>
@@ -292,7 +292,7 @@
     <div class="govuk-checkboxes">
 
       <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="nationality" name="nationality" type="checkbox" value="british" aria-describedby="nationality-item-hint">
+        <input class="govuk-checkboxes__input" id="nationality" name="nationality" type="checkbox" value="english" aria-describedby="nationality-item-hint" checked="checked">
         <label class="govuk-label govuk-checkboxes__label" for="nationality">
           English
         </label>
