--- a/app/views/prototypes/small-itp/highest-subject.html
+++ b/app/views/prototypes/small-itp/highest-subject.html
@@ -25,7 +25,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What is the highest qualification in their main subject?
+        What is their highest qualification in their main subject?
       </h1>
     </legend><br>
 
