--- a/app/views/prototypes/small-itp/how-long-education.html
+++ b/app/views/prototypes/small-itp/how-long-education.html
@@ -27,7 +27,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How long has the staff member worked in the further education sector?
+        How long have they worked in the further education sector?
       </h1>
     </legend><br>
 
