--- a/app/views/prototypes/small-itp/salary.html
+++ b/app/views/prototypes/small-itp/salary.html
@@ -24,7 +24,7 @@
         <form action="/form-handler" method="post" novalidate>
           <div class="govuk-form-group">
             <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--xl" for="postcode">
-                What was their gross annual salary?
+                What is their gross annual salary?
               </label><br>
               <span id="sort-code-hint" class="govuk-hint">
     For example, £23,000
