--- a/app/views/prototypes/small-itp/contracted-hours.html
+++ b/app/views/prototypes/small-itp/contracted-hours.html
@@ -25,7 +25,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What were their contracted hours?
+        What are their contracted hours?
       </h1>
     </legend><br>
 
