--- a/app/views/prototypes/small-itp/what-contract.html
+++ b/app/views/prototypes/small-itp/what-contract.html
@@ -30,7 +30,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How many contracts did they have?
+        How many contracts do they have?
       </h1>
     </legend><br>
     
