--- a/app/views/prototypes/small-itp/what-training.html
+++ b/app/views/prototypes/small-itp/what-training.html
@@ -25,7 +25,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What teacher training are they working towards?
+        What teacher training qualification are they working towards?
       </h1>
     </legend><br>
     
