--- a/app/views/prototypes/small-itp/start-intro.html
+++ b/app/views/prototypes/small-itp/start-intro.html
@@ -31,7 +31,7 @@
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">FE staff return</h1>
+        <h1 class="govuk-heading-xl">FE staff collection</h1>
         <span class="govuk-caption-l">August 2021 to September 2022</span><br>
 
         <p class="govuk-body">Use this service to:</p>
