--- a/app/views/prototypes/small-itp/staff-zero2.html
+++ b/app/views/prototypes/small-itp/staff-zero2.html
@@ -58,7 +58,14 @@
     <td class="govuk-table__cell" scope="row"> </td>
    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
   </tr>
-  
+
+
+  <tr class="govuk-table__row">
+    
+    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Julie Anne Angelo</a></td>
+    <td class="govuk-table__cell" scope="row"> </td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
+  </tr>
   
 
 
@@ -69,7 +76,7 @@
           <input type="hidden" name="answers-checked" value="true">
 
           <a href="#" class="govuk-button show-continue" style="display: inline;">
-    Save
+      Submit
     </a>
 
         </form>
