--- a/app/views/prototypes/small-itp/start-staff-second.html
+++ b/app/views/prototypes/small-itp/start-staff-second.html
@@ -31,7 +31,7 @@
         
 
       <table class="govuk-table">
-
+<!-- <caption class="govuk-table__caption">Older versions of the ILR FileMerge tool</caption> -->
 <thead class="govuk-table__head">
   <tr class="govuk-table__row">
     
@@ -47,7 +47,7 @@
     <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="staff-totals">About my organisation</a>
         </td>
     <td class="govuk-table__cell" scope="row"> </td>
-   <!-- <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Submitted</strong></td>-->
+    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Submitted</strong></td>
   </tr>
   <tr class="govuk-table__row">
     
