--- a/app/views/prototypes/small-itp/ztemplate.html
+++ b/app/views/prototypes/small-itp/ztemplate.html
@@ -35,6 +35,41 @@
       </h1>
   </div>
 </div>
+
+<table class="govuk-table">
+<!-- <caption class="govuk-table__caption">Older versions of the ILR FileMerge tool</caption> -->
+<thead class="govuk-table__head">
+  <tr class="govuk-table__row">
+    <th class="govuk-table__header" scope="col">Version number</th>
+    <th class="govuk-table__header" scope="col">Academic year</th>
+
+    <th class="govuk-table__header" scope="col">Date uploaded</th>
+    <th class="govuk-table__header" scope="col">Link</th>
+  </tr>
+</thead>
+<tbody class="govuk-table__body">
+  <tr class="govuk-table__row">
+    <th class="govuk-table__header">1.3</th>
+    <td class="govuk-table__cell" scope="row">2019 to 2020</td>
+    <td class="govuk-table__cell" scope="row">Wednesday 7 August 2019 12:56:43</td>
+    <td class="govuk-table__cell"><a href="#">Download</a></td>
+  </tr>
+  <tr class="govuk-table__row">
+    <th class="govuk-table__header">2.3</th>
+    <td class="govuk-table__cell" scope="row">2018 to 2019</td>
+    <td class="govuk-table__cell" scope="row">Thursday 1 August 2019 17:31:16</td>
+    <td class="govuk-table__cell"><a href="#">Download</a></td>
+  </tr>
+  <tr class="govuk-table__row">
+    <th class="govuk-table__header">2.0</th>
+    <td class="govuk-table__cell" scope="row">2017 to 2018</td>
+    <td class="govuk-table__cell" scope="row">Wednesday 31 July 2019 15:07:35</td>
+    <td class="govuk-table__cell"><a href="#">Download</a></td>
+  </tr>
+
+
+</tbody>
+</table>
       
 
     </div>
