--- a/app/views/prototypes/small-itp/start-intro.html
+++ b/app/views/prototypes/small-itp/start-intro.html
@@ -37,9 +37,9 @@
         <p class="govuk-body">Use this service to:</p>
 
         <ul class="govuk-list govuk-list--bullet">
-          <li>There are two parts to this collection - submit your provider information and submit your staff details</li>
-          <li>You can save each section and return as many times as you need to before you submit</li>
-          <li>In the staff section you can choose to upload a file from your own internal system - or add your staff into a form one at a time.</li>
+          <li>Submit both your provider information and staff details; the two parts to this collection. </li>
+          <li>Save each section and return as many times as needed before you submit.</li>
+          <li>Upload a file from your own internal system for your staff details or add them one at a time using the digital service.</li>
           
         </ul>
 
