--- a/app/views/prototypes/small-itp/complete-john-five.html
+++ b/app/views/prototypes/small-itp/complete-john-five.html
@@ -94,7 +94,7 @@
           <input type="hidden" name="answers-checked" value="true">
 
           <a href="list-staff-john-end" class="govuk-button show-continue" style="display: inline;">
-     Staff list
+     Return to the staff list
     </a>
 
         </form>
