--- a/app/views/prototypes/small-itp/list-staff-nil.html
+++ b/app/views/prototypes/small-itp/list-staff-nil.html
@@ -16,48 +16,52 @@
   
         
   <h1 class="govuk-heading-m">Impact Training Limited
-  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>     
+  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>  <br>   
 
   
      <h1 class="govuk-heading-xl">
-  Your staff
+  Your staff list
 </h1>
   
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds-from-desktop">
+      <div class="govuk-grid-column-two-thirds">
 
-       <ol class="app-task-list">
-        <li>
-          
-          <ul class="app-task-list__items">
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="complete-john" aria-describedby="eligibility-completed">
-                  John Vinecent Adams
-                </a>
-              </span>
-              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong>
-            </li>
+       <table class="govuk-table">
 
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="complete-john" aria-describedby="eligibility-completed">
-                  Julie Anne Angelo
-                </a>
-              </span>
-              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong>
-            </li>
-            
-          </ul>
-        </li>
-        <li>
-         
-          </ul>
-        </li>
-        
-      </ol>
-        
-      <p class="govuk-table__cell--numeric"><a class="#" href="add-two">Add a member of staff</a> </p><br>
+      <thead class="govuk-table__head">
+      <tr class="govuk-table__row">
+    
+      <th class="govuk-table__header" scope="col"></th>
+
+      <th class="govuk-table__header" scope="col"></th>
+      <th class="govuk-table__header" scope="col"></th>
+    </tr>
+</thead>
+
+
+
+<tbody class="govuk-table__body">
+  <tr class="govuk-table__row">
+    
+    <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="complete-john">John Vinecent Adams</a>
+        </td>
+    <td class="govuk-table__cell" scope="row"> </td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
+  </tr>
+
+
+  <tr class="govuk-table__row">
+    
+    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Julie Anne Angelo</a></td>
+    <td class="govuk-table__cell" scope="row"> </td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
+  </tr>
+  
+
+
+</tbody>
+</table> 
+ <p class="govuk-table__cell--numeric"><a class="#" href="add-two">Add a member of staff</a> </p><br>
 
         
 
