--- a/app/views/prototypes/small-itp/fte.html
+++ b/app/views/prototypes/small-itp/fte.html
@@ -30,14 +30,20 @@
     </legend><br>
     
     
+  <span id="sort-code-hint" class="govuk-hint">
+    For example, 20 
+  </span>
 
-
+            </h1>
+            <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text">
+          </div>
 
     
   </fieldset>
 </div>
+</div>
 
-<br><br>
+<br>
 
 
           <a href="date" class="govuk-button show-continue" style="display: inline;">
