prototype banner added to all

--- a/app/views/prototypes/small-itp/complete-john-four.html
+++ b/app/views/prototypes/small-itp/complete-john-four.html
@@ -26,9 +26,9 @@
 
   
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds-from-desktop">
+      <div class="govuk-grid-column-two-thirds">
 
-        <h1 class="govuk-heading-xl">John Vincent Adams</h1>
+        <h1 class="govuk-heading-xl">John Vincent Adams</h1><br>
 
         
         
