--- a/app/views/prototypes/small-itp/complete-john-two.html
+++ b/app/views/prototypes/small-itp/complete-john-two.html
@@ -22,7 +22,7 @@
 
         
   <h1 class="govuk-heading-m">Impact Training Limited
-  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>     
+  <span class="govuk-caption-m">UKPRN: 00012345</span></h1> <br>   
 
   
     <div class="govuk-grid-row">
@@ -96,7 +96,7 @@
           <input type="hidden" name="answers-checked" value="true">
 
          <a href="list-staff-john" class="govuk-button show-continue" style="display: inline;">
-      Staff list
+      Back to your staff list
     </a>
 
         </form>
