--- a/app/views/prototypes/small-itp/start-staff.html
+++ b/app/views/prototypes/small-itp/start-staff.html
@@ -17,10 +17,10 @@
  
 
   <h1 class="govuk-heading-m">Impact Training Limited
-  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
+  <span class="govuk-caption-m">UKPRN: 00012345</span></h1><br>
 
   
-        <h1 class="govuk-heading-xl">FE staff collection<br>
+        <h1 class="govuk-heading-xl">FE staff collection<b>
         <span class="govuk-caption-xl">August 2021 to September 2022</span></h1>
 
         <p class="govuk-body">As stated in the funding rules you must tell us about the staff you employ.<br>You need to complete two parts. </p>
@@ -32,15 +32,18 @@
 
       <table class="govuk-table">
 
-<thead class="govuk-table__head">
-  <tr class="govuk-table__row">
+      <thead class="govuk-table__head">
+      <tr class="govuk-table__row">
     
-    <th class="govuk-table__header" scope="col"></th>
+      <th class="govuk-table__header" scope="col"></th>
 
-    <th class="govuk-table__header" scope="col"></th>
-    <th class="govuk-table__header" scope="col"></th>
-  </tr>
+      <th class="govuk-table__header" scope="col"></th>
+      <th class="govuk-table__header" scope="col"></th>
+    </tr>
 </thead>
+
+
+
 <tbody class="govuk-table__body">
   <tr class="govuk-table__row">
     
