--- a/app/views/prototypes/small-itp/add-two.html
+++ b/app/views/prototypes/small-itp/add-two.html
@@ -4,15 +4,26 @@
   GOV.UK prototype kit
 {% endblock %}
 {% block beforeContent %}
-  
+  <div class="govuk-phase-banner">
+  <p class="govuk-phase-banner__content">
+    <strong class="govuk-tag govuk-phase-banner__content__tag">
+      prototype
+    </strong>
+    <span class="govuk-phase-banner__text">
+      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+    </span>
+  </p>
+</div>
+
+ <div class="govuk-width-container">
+  <a href="#" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
 {% block content %}
 
 
-        <div class="govuk-width-container">
-  <a href="#" class="govuk-back-link">Back</a>
+       
 
    <span class="govuk-caption-xl">Impact Training Limited</span>
 
