--- a/app/views/prototypes/small-itp/answers-provider.html
+++ b/app/views/prototypes/small-itp/answers-provider.html
@@ -15,6 +15,9 @@
   </p>
 </div>
 
+ <div class="govuk-width-container">
+  <a href="#" class="govuk-back-link">Back</a>
+
 {% endblock %}
 
 {% block content %}
