--- a/app/views/prototypes/small-itp/complete-john-five.html
+++ b/app/views/prototypes/small-itp/complete-john-five.html
@@ -15,6 +15,9 @@
   </p>
 </div>
 
+ <div class="govuk-width-container">
+  <a href="#" class="govuk-back-link">Back</a>
+
 {% endblock %}
 
 {% block content %}
@@ -22,11 +25,11 @@
 
         
   <h1 class="govuk-heading-m">Impact Training Limited
-  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>     
+  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>    <br> 
 
   
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds-from-desktop">
+      <div class="govuk-grid-column-two-thirds">
 
         <h1 class="govuk-heading-xl">John Vincent Adams</h1>
 
