--- a/app/views/prototypes/small-itp/complete-john.html
+++ b/app/views/prototypes/small-itp/complete-john.html
@@ -22,11 +22,11 @@
 
         
   <h1 class="govuk-heading-m">Impact Training Limited
-  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>     
+  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>   <br>  
 
   
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds-from-desktop">
+      <div class="govuk-grid-column-two-thirds">
 
         <h1 class="govuk-heading-xl">John Vincent Adams</h1>
 
