--- a/app/views/prototypes/small-itp/confirmation-provider.html
+++ b/app/views/prototypes/small-itp/confirmation-provider.html
@@ -4,6 +4,18 @@
   GOV.UK prototype kit
 {% endblock %}
 {% block beforeContent %}
+<div class="govuk-phase-banner">
+  <p class="govuk-phase-banner__content">
+    <strong class="govuk-tag govuk-phase-banner__content__tag">
+      prototype
+    </strong>
+    <span class="govuk-phase-banner__text">
+      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+    </span>
+  </p>
+</div>
+
+ 
   
 
 {% endblock %}
@@ -11,8 +23,6 @@
 {% block content %}
 
 
-        <div class="govuk-width-container">
-  <a href="#" class="govuk-back-link">Back</a>
 
   
 
