--- a/app/views/prototypes/small-itp/filled.html
+++ b/app/views/prototypes/small-itp/filled.html
@@ -4,20 +4,32 @@
   GOV.UK prototype kit
 {% endblock %}
 {% block beforeContent %}
-  
+  <div class="govuk-phase-banner">
+  <p class="govuk-phase-banner__content">
+    <strong class="govuk-tag govuk-phase-banner__content__tag">
+      prototype
+    </strong>
+    <span class="govuk-phase-banner__text">
+      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+    </span>
+  </p>
+</div>
+
+ <div class="govuk-width-container">
+  <a href="#" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
 {% block content %}
 
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-      <a href="#" class="govuk-back-link">Back</a>
- 
 
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
+
+
+  <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
 
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
@@ -180,11 +192,13 @@
 
 
 
+
           <a href="easy" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
  </div>
+</div>
 </div>
         
 
