--- a/app/views/prototypes/small-itp/highest-subject.html
+++ b/app/views/prototypes/small-itp/highest-subject.html
@@ -4,7 +4,19 @@
   GOV.UK prototype kit
 {% endblock %}
 {% block beforeContent %}
-  
+  <div class="govuk-phase-banner">
+  <p class="govuk-phase-banner__content">
+    <strong class="govuk-tag govuk-phase-banner__content__tag">
+      prototype
+    </strong>
+    <span class="govuk-phase-banner__text">
+      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+    </span>
+  </p>
+</div>
+
+ <div class="govuk-width-container">
+  <a href="#" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
@@ -12,12 +24,12 @@
 
 
         
-  <a href="#" class="govuk-back-link">Back</a>
+  
 
   <span class="govuk-caption-xl">John Vincent Adams </span><br>
 
   <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds-from-desktop">
+      <div class="govuk-grid-column-two-thirds">
             
 
 
