prototype banner added to all

--- a/app/views/prototypes/small-itp/many-vacancies.html
+++ b/app/views/prototypes/small-itp/many-vacancies.html
@@ -5,7 +5,19 @@
 {% endblock %}
 {% block beforeContent %}
   
+<div class="govuk-phase-banner">
+  <p class="govuk-phase-banner__content">
+    <strong class="govuk-tag govuk-phase-banner__content__tag">
+      prototype
+    </strong>
+    <span class="govuk-phase-banner__text">
+      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+    </span>
+  </p>
+</div>
 
+ 
+  <a href="#" class="govuk-back-link">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,7 +25,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-      <a href="#" class="govuk-back-link">Back</a>
+     
  
 
   <h1 class="govuk-heading-m">Impact Training Limited
