--- a/app/views/prototypes/small-itp/confirmation.html
+++ b/app/views/prototypes/small-itp/confirmation.html
@@ -43,7 +43,8 @@
 
         <p class="govuk-body">We have sent you a confirmation email.</p>
 
-        <h2 class="govuk-heading-m">What happens next</h2>
+        
+        <h2 class="govuk-heading-m">Return to your <a href="start-staff-end" class="govuk-link">start page</a></h2>
 
         <!--<p class="govuk-body">
           We’ve sent your application to Hackney Electoral Register Office.
