--- a/app/views/prototypes/small-itp/start-staff-end.html
+++ b/app/views/prototypes/small-itp/start-staff-end.html
@@ -34,7 +34,7 @@
         <h1 class="govuk-heading-xl">FE staff collection<br>
         <span class="govuk-caption-xl">August 2021 to September 2022</span></h1>
 
-        <p class="govuk-body">As stated in the funding rules you must tell us about the staff you employ.<br>You need to complete two parts. </p>
+        <p class="govuk-body">You have submitted two parts of your staff collection.</p>
 
         
 
@@ -64,7 +64,7 @@
     
     <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="mis">My staff</a></td>
     <td class="govuk-table__cell" scope="row">       </td>
-    <td class="govuk-table__cell"><a href="#"></a></td>
+    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Submitted</strong></td>
   </tr>
   
 
