prototype banner added to all

--- a/app/views/prototypes/small-itp/fte.html
+++ b/app/views/prototypes/small-itp/fte.html
@@ -43,7 +43,7 @@
     
     
   <span id="sort-code-hint" class="govuk-hint">
-    For example, 20 
+    For example, 0.6 means the member of staff works three days a week.
   </span>
 
             </h1>
