--- a/app/views/prototypes/small-itp/vacancies-subject.html
+++ b/app/views/prototypes/small-itp/vacancies-subject.html
@@ -26,7 +26,9 @@
         
   
 
-  <span class="govuk-caption-xl">John Vincent Adams </span><br>
+  <h1 class="govuk-heading-m">Impact Training Limited
+  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
+
 
   <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
