prototype banner added to all

--- a/app/views/prototypes/small-itp/complete-john-five.html
+++ b/app/views/prototypes/small-itp/complete-john-five.html
@@ -52,7 +52,7 @@
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="role" aria-describedby="read-declaration-completed">
-                  Time in FE
+                  Working in FE
                 </a>
               </span>
               <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
