--- a/app/views/prototypes/small-itp/complete-john.html
+++ b/app/views/prototypes/small-itp/complete-john.html
@@ -49,7 +49,7 @@
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="role" aria-describedby="read-declaration-completed">
-                  Time in FE
+                  Working in FE
                 </a>
               </span>
               
