prototype banner added to all

--- a/app/views/prototypes/small-itp/complete-john-five.html
+++ b/app/views/prototypes/small-itp/complete-john-five.html
@@ -97,7 +97,7 @@
           <input type="hidden" name="answers-checked" value="true">
 
           <a href="list-staff-john-end" class="govuk-button show-continue" style="display: inline;">
-     Return to the staff list
+     Back to staff list
     </a>
 
         </form>
