new staff catagories

--- a/app/views/prototypes/small-itp/staff-totals.html
+++ b/app/views/prototypes/small-itp/staff-totals.html
@@ -69,10 +69,27 @@ Include part-time staff.
 
   <div class="govuk-form-group">
     <label class="govuk-label" for="address-postcode">
-      Support
+      Teaching support
     </label>
+<span id="sort-code-hint" class="govuk-hint">
+          Learner mentors, pastoral tutors, assessors, technicians, teaching assistants
+        </span>
+    
     <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
-  </div><br>
+  </div>
+
+
+<div class="govuk-form-group">
+    <label class="govuk-label" for="address-postcode">
+      Other support
+    </label>
+   <span id="sort-code-hint" class="govuk-hint">Administration (non-management), facilities, catering, security, cleaners
+        </span>
+    <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
+  </div>
+
+
+  <br>
 
 
   <div class="govuk-form-group">
