new staff catagories

--- a/app/views/prototypes/small-itp/answers-provider.html
+++ b/app/views/prototypes/small-itp/answers-provider.html
@@ -116,7 +116,7 @@
         
            <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Leader vacancies
+              Senior leadership 
             </dt>
             <dd class="govuk-summary-list__value">
               More than 10
@@ -130,7 +130,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Teaching vacancies
+              Teaching
             </dt>
             <dd class="govuk-summary-list__value">
               1 - 5
@@ -144,10 +144,24 @@
 
            <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Support vacancies
+              Teaching support
             </dt>
             <dd class="govuk-summary-list__value">
               1 - 5
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              How many
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Don't know
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -172,7 +186,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Difficult types
+              Difficulty
             </dt>
             <dd class="govuk-summary-list__value">
              Academic teaching
@@ -186,7 +200,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Difficult academic
+              Academic
             </dt>
             <dd class="govuk-summary-list__value">
              History, Spanish
@@ -200,10 +214,24 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Difficult vocational
+              Vocational
             </dt>
             <dd class="govuk-summary-list__value">
              Construction
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Other
+            </dt>
+            <dd class="govuk-summary-list__value">
+             Life skills
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
