--- a/app/views/prototypes/small-itp/many-vacancies-filled.html
+++ b/app/views/prototypes/small-itp/many-vacancies-filled.html
@@ -155,7 +155,7 @@
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
         <span class="govuk-accordion__section-button" id="accordion-default-heading-3">
-          All support
+          Teaching support
         </span>
       </h2>
     </div>
