new staff catagories

--- a/app/views/prototypes/small-itp/staff-totals.html
+++ b/app/views/prototypes/small-itp/staff-totals.html
@@ -58,7 +58,7 @@ Include part-time staff.
 
   <div class="govuk-form-group">
     <label class="govuk-label" for="address-postcode">
-      Teaching
+      Teacher
     </label>
    <span id="sort-code-hint" class="govuk-hint">
           Includes tutors, trainers, instructors and assessors
@@ -74,7 +74,7 @@ Include part-time staff.
 <span id="sort-code-hint" class="govuk-hint">
           Learner mentors, pastoral tutors, assessors, technicians, teaching assistants
         </span>
-    
+
     <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
   </div>
 
