--- a/app/views/prototypes/small-itp/answers-provider.html
+++ b/app/views/prototypes/small-itp/answers-provider.html
@@ -130,7 +130,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Teaching
+              Teacher
             </dt>
             <dd class="govuk-summary-list__value">
               1 - 5
