new staff catagories

--- a/app/views/prototypes/small-itp/role.html
+++ b/app/views/prototypes/small-itp/role.html
@@ -77,22 +77,31 @@
         </span>
       </div><br>
 
-
-      <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="how-contacted-conditional" name="how-contacted" type="radio" value="email" data-aria-controls="conditional-how-contacted-conditional">
-        <label class="govuk-label govuk-radios__label" for="how-contacted-conditional">
+       <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
           Other support
         </label>
 
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
           Administration (non-management), facilities, catering, security, cleaners
         </span>
+      </div><br>
+
+
+      <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="how-contacted-conditional" name="how-contacted" type="radio" value="email" data-aria-controls="conditional-how-contacted-conditional">
+        <label class="govuk-label govuk-radios__label" for="how-contacted-conditional">
+          Other
+        </label>
+
+        
       </div>
       <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-how-contacted-conditional">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-email">
-           Enter another role
+           Enter role
           </label>
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
         </div>
