--- a/app/views/prototypes/small-itp/add.html
+++ b/app/views/prototypes/small-itp/add.html
@@ -37,9 +37,8 @@
 </h1>
 
             
-<!--<div class="govuk-inset-text">
-  Enter each staff member one by one
-</div>-->
+<p>Add tempoary staff but not agency workers. Include full and part-time staff. 
+    </p><br>
   <div class="govuk-form-group">
   <label class="govuk-label" for="full-name">
     First names
