--- a/app/views/prototypes/small-itp/role.html
+++ b/app/views/prototypes/small-itp/role.html
@@ -91,7 +91,7 @@
 <br>
 
 
-          <a href="how-long-role" class="govuk-button show-continue" style="display: inline;">
+          <a href="teach" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
