--- a/app/views/prototypes/small-itp/edit.html
+++ b/app/views/prototypes/small-itp/edit.html
@@ -36,7 +36,8 @@
             <h1 class="govuk-heading-xl">
   Add a staff member
 </h1>
-
+<p>Add tempoary staff but not agency workers. Include full and part-time staff. 
+    </p><br>
             
 <!--<div class="govuk-inset-text">
   Enter each staff member one by one
