new staff catagories

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -88,7 +88,8 @@
 
       <p>Small ITP flow - <a href="/prototypes/small-itp/details">Start</a>
       </p><br>
-
+      <p>Small ITP - non teacher flow - <a href="/prototypes/non-teacher/details">Smaller flow Julie Anne Angelo</a>
+      </p><br>
 
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
