new staff catagories

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -89,7 +89,11 @@
       <p>Small ITP flow - <a href="/prototypes/small-itp/details">Start</a>
       </p><br>
       <p>Small ITP - non teacher flow - <a href="/prototypes/non-teacher/details">Smaller flow Julie Anne Angelo</a>
-      </p><br>
+      </p>
+      <p>On 'My Staff' after adding John - add another member = Juile Anne Angelo.<br>Select 'Senior leadership' role and 'No' to Does their work include teaching?. </p>
+
+
+      <br><br>
 
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
