new staff catagories

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -88,9 +88,9 @@
 
       <p>Small ITP flow - <a href="/prototypes/small-itp/details">Start</a>
       </p><br>
-      <p>Small ITP - non teacher flow - <a href="/prototypes/non-teacher/details">Smaller flow Julie Anne Angelo</a>
+      <p>Small ITP non teacher - <a href="/prototypes/non-teacher/details">Shorter flow for Julie Anne Angelo</a>
       </p>
-      <p>On 'My Staff' after adding John - add another member = Juile Anne Angelo.<br>Select 'Senior leadership' role and 'No' to Does their work include teaching?. </p>
+      <p>On 'My Staff' after adding John - add another member = Julie Anne Angelo.<br>Select 'Senior leadership' role and 'No' to Does their work include teaching?. </p>
 
 
       <br><br>
