--- a/app/views/prototypes/non-teacher/teach.html
+++ b/app/views/prototypes/non-teacher/teach.html
@@ -63,7 +63,7 @@
 <br>
 
 
-          <a href="how-long-education" class="govuk-button show-continue" style="display: inline;">
+          <a href="how-long-role" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
