new staff catagories

--- a/app/views/prototypes/non-teacher/list-staff-john.html
+++ b/app/views/prototypes/non-teacher/list-staff-john.html
@@ -67,7 +67,7 @@
 
   <tr class="govuk-table__row">
     
-    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Julie Anne Angelo</a></td>
+    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="complete-john-five">Julie Anne Angelo</a></td>
     <td class="govuk-table__cell" scope="row"> </td>
    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
   </tr>
